// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@font-face in global 1`] = `<div />`;

exports[`array fallback 1`] = `
.emotion-0 {
  display: green;
  display: hotpink;
}

<div>
  <div
    className="emotion-0"
  >
    something
  </div>
</div>
`;

exports[`css call composition 1`] = `
Object {
  "name": "d4uv9l",
  "styles": ":hover{
    color: hotpink;
  }",
}
`;

exports[`global 1`] = `<div />`;

exports[`keyframes 1`] = `
.emotion-0 {
  -webkit-animation: animation-1ozfi5a;
  animation: animation-1ozfi5a;
}

<div>
  <div
    className="emotion-0"
  >
    animation-1ozfi5a
  </div>
</div>
`;

exports[`keyframes insert in css call 1`] = `
.emotion-0 {
  -webkit-animation: animation-1ozfi5a;
  animation: animation-1ozfi5a;
}

<div>
  <div
    className="emotion-0"
  >
    animation-1ozfi5a
  </div>
</div>
`;

exports[`label in css call 1`] = `
.emotion-0 {
  color: hotpink;
}

<div>
  <div
    className="emotion-0"
  >
    something
  </div>
</div>
`;

exports[`object with false 1`] = `
.emotion-0 {
  color: hotpink;
}

<div>
  <div
    className="emotion-0"
  >
    something
  </div>
</div>
`;

exports[`string as css prop throws 1`] = `
"Strings are not allowed as css prop values, please wrap it in a css template literal from '@emotion/css' like this: css\`
            color: hotpink;
          \`"
`;

exports[`theming with the css prop 1`] = `
.emotion-0 {
  color: hotpink;
}

<div
  className="emotion-0"
/>
`;

exports[`thing 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div>
  <div
    className="emotion-0"
  >
    something
  </div>
</div>
`;
